--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
   </form>
-  <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
